Fix the mishandling of generic fonts that led to pageload performance regression, b=161481, p=schofield@wolfram.com, r=jfrancis@netscape.com, sr=rbs@maths.uq.edu.au